# scaffold-layout-mvp

./: README.md  pyproject.toml  requirements.txt
src/scaffold_mvp/: __init__.py  app.py  config.py  image_pipeline.py  layout_engine.py  models.py  reporting.py
tests/: test_layout_engine.py
